# Documentacion-Scrum

Backend/: pyproject.toml
Backend/app/: database.py  main.py
Backend/app/models/: generated.py
Backend/app/routers/: contrato.py  register_company.py  workers.py
Backend/app/routers/auth/: login.py  refresh.py
Backend/app/schemas/: epp.py  pdf_contrato.py  register_company.py
Backend/app/services/: auth.py  dependencies.py  email_validation.py
Backend/generated_excels/: listado_contratos_20251003_185357.xlsx
Controladores/: Makefile  README.md
Documento 0/: Grupo 10 - Documento 0.docx
Documento 0/Grupo 10 - Anexo/: contaplus.bpm
FrontEnd/pages/: Error404Page.jsx
FrontEnd/services/: api.cargo.js  api.correo.js  api.descargas.js  api.descargas.mock.js  api.epp.mock.js  api.permisos.js  api.permisos.mock.js
FrontEnd/styles/: DescargasPage.css  LoginAndRegisterPage.css
FrontEnd/utils/: validators.js
Scrum ++/: Grupo 10 - Documento Scrum ++ 1.docx  Grupo 10 - Organización Trabajo Scrum++.xlsx  PPT Scrum++.pptx
Scrum ++ 2/Grupo 10 - Anexo/: Backlog.xlsx
Scrum ++/Grupo 10 - Anexo/: Backlog.xlsx
Scrum ++3/: PPT Scrum++ 3.pptx
Scrum ++3/Grupo 10 - Anexo/: Backlog scrum 3.xlsx  erdConstaplus.html
Vista/: App.jsx  main.jsx
Vista/hooks/: AuthContext.jsx
Vista/pages/: CorreoDespido.jsx  index.jsx
Vista/services/: api.Empresa.js  api.base.js  api.cargo.mock.js  api.contrato.js  api.epp.js  api.odi.js  api.odi.mock.js  api.trabajador.js  auth.service.js
Vista/styles/: CargosPage.css  EppPage.css  OdiPage.css  PermisosPage.css  (+1 more)
(+100 files in other folders)
